# 3D-Renderer

./: .gitignore  CMakeLists.txt  CUSTOM_SHAPES_GUIDE.md  PIXEL_REFERENCE.md  PYRAMID_EXAMPLE.txt  README.md  SDL2_SETUP.md  build.sh
.claude/: settings.local.json
src/: main.cpp
src/app/: app_blueprint.h  main_app_blueprint.cpp  splash_screen.h  ui_effects.h
src/core/: mat.h  vec.h
src/image/: tgaimage.cpp  tgaimage.h
src/rasterizer/: advanced_shader.h  line.h  phong_shader.h  shader.h  shadowmap.h  ssao.h  triangle.h  zbuffer.h
src/raytracer/: bvh.h  camera.h  hittable.h  light.h  material.h  mesh_to_scene.h  ray.h  renderer.h  scene.h  sky.h  sphere.h  triangle_hit.h
src/scene/: editable_mesh.h  model.h
src/transform/: transform.h
